# Smart-Library-Management-System--C---

./: CMakeLists.txt  README.md  config.json
src/: main.cpp
src/app/: Services.cpp  Services.hpp
src/db/: Database.cpp  Database.hpp  Migrations.cpp  Migrations.hpp  Repositories.cpp  Repositories.hpp
src/domain/: Models.hpp
src/ui/: TerminalApp.cpp  TerminalApp.hpp
src/utils/: Config.cpp  Config.hpp  CsvExporter.cpp  CsvExporter.hpp  Hashing.cpp  Hashing.hpp  Logger.cpp  Logger.hpp  Time.cpp  Time.hpp
tests/: test_runner.cpp
